raw/futures-rs-test-all--2016-11-11-04-24-18--5.log
commit 280362a02df97670dd08ed19557c81b504b395c3
Merge: 3ac9ec7 12f0b6f
Author: bors <bors@rust-lang.org>
Date:   Thu Nov 10 23:44:44 2016 -0800

    Auto merge of #36615 - sinkuu:e0243_0244, r=nrc
    
    Make E0243/E0244 message consistent with E0107
    
    E0243/E0233 prints `expected {}, found {}` on the span note, while E0107 prints it on the first line. This is confusing when both error occur simultaneously.
    
    This PR makes E0243/E0233 print `expected {}, found {}` on the first line.
    
    Code:
    
    ``` rust
    struct Foo<'a, 'b> {
        s: &'a str,
        t: &'b str,
    }
    
    type Bar<T, U> = Foo<T, U>;
    ```
    
    rustc output (before):
    
    ```
    error[E0107]: wrong number of lifetime parameters: expected 2, found 0
     --> test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected 2 lifetime parameters
    
    error[E0244]: wrong number of type arguments
     --> test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected no type arguments, found 2
    ```
    
    rustc output (after):
    
    ```
    error[E0107]: wrong number of lifetime parameters: expected 2, found 0
     --> /tmp/test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected 2 lifetime parameters
    
    error[E0244]: wrong number of type arguments: expected 0, found 2
     --> /tmp/test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected no type arguments
    ```
rustc: ./futures-rs-test-all
cargo rustc --test all  -- -Ztime-passes -Zinput-stats
   Compiling futures v0.1.0 (file:///root/benchmarks/futures-rs-test-all)
time: 0.002; rss: 43MB	parsing
Lines of code:             412
Pre-expansion node count:  5286
time: 0.000; rss: 43MB	recursion limit
time: 0.000; rss: 43MB	crate injection
time: 0.000; rss: 43MB	plugin loading
time: 0.000; rss: 43MB	plugin registration
time: 0.019; rss: 68MB	expansion
time: 0.001; rss: 68MB	maybe building test harness
time: 0.000; rss: 68MB	maybe creating a macro crate
Post-expansion node count: 10387
time: 0.000; rss: 68MB	checking for inline asm in case the target doesn't support it
time: 0.000; rss: 68MB	complete gated feature checking
time: 0.000; rss: 68MB	early lint checks
time: 0.000; rss: 68MB	AST validation
time: 0.003; rss: 68MB	name resolution
time: 0.000; rss: 68MB	lowering ast -> hir
time: 0.000; rss: 68MB	indexing hir
time: 0.000; rss: 68MB	attribute checking
time: 0.000; rss: 68MB	language item collection
time: 0.000; rss: 68MB	lifetime resolution
time: 0.000; rss: 68MB	looking for entry point
time: 0.000; rss: 68MB	looking for plugin registrar
time: 0.000; rss: 68MB	region resolution
time: 0.000; rss: 68MB	loop checking
time: 0.000; rss: 68MB	static item recursion checking
time: 0.003; rss: 68MB	compute_incremental_hashes_map
time: 0.000; rss: 68MB	load_dep_graph
time: 0.004; rss: 72MB	type collecting
time: 0.000; rss: 72MB	variance inference
time: 0.003; rss: 72MB	coherence checking
time: 0.007; rss: 75MB	wf checking
time: 0.002; rss: 75MB	item-types checking
time: 0.109; rss: 79MB	item-bodies checking
time: 0.000; rss: 79MB	drop-impl checking
time: 0.004; rss: 80MB	const checking
time: 0.000; rss: 80MB	privacy checking
time: 0.000; rss: 80MB	stability index
time: 0.000; rss: 80MB	intrinsic checking
time: 0.000; rss: 80MB	effect checking
time: 0.001; rss: 80MB	match checking
time: 0.000; rss: 80MB	liveness checking
time: 0.002; rss: 80MB	rvalue checking
time: 0.006; rss: 81MB	MIR dump
  time: 0.001; rss: 81MB	SimplifyCfg
  time: 0.001; rss: 81MB	QualifyAndPromoteConstants
  time: 0.002; rss: 82MB	TypeckMir
  time: 0.000; rss: 82MB	SimplifyBranches
  time: 0.000; rss: 82MB	SimplifyCfg
time: 0.004; rss: 82MB	MIR cleanup and validation
time: 0.006; rss: 82MB	borrow checking
time: 0.000; rss: 82MB	reachability checking
time: 0.000; rss: 82MB	death checking
time: 0.000; rss: 82MB	stability checking
time: 0.000; rss: 82MB	unused lib feature checking
time: 0.003; rss: 82MB	lint checking
time: 0.001; rss: 82MB	resolving dependency formats
  time: 0.000; rss: 82MB	NoLandingPads
  time: 0.001; rss: 82MB	SimplifyCfg
  time: 0.001; rss: 82MB	EraseRegions
  time: 0.000; rss: 82MB	AddCallGuards
  time: 0.005; rss: 82MB	ElaborateDrops
  time: 0.000; rss: 82MB	NoLandingPads
  time: 0.001; rss: 82MB	SimplifyCfg
  time: 0.000; rss: 82MB	InstCombine
  time: 0.000; rss: 82MB	Deaggregator
  time: 0.000; rss: 82MB	CopyPropagation
  time: 0.000; rss: 82MB	SimplifyLocals
  time: 0.000; rss: 82MB	AddCallGuards
  time: 0.000; rss: 82MB	PreTrans
time: 0.008; rss: 82MB	MIR optimisations
  time: 0.000; rss: 82MB	write metadata
  time: 0.145; rss: 92MB	translation item collection
  time: 0.019; rss: 92MB	codegen unit partitioning
  time: 0.018; rss: 146MB	internalize symbols
time: 1.098; rss: 146MB	translation
time: 0.000; rss: 146MB	assert dep graph
time: 0.000; rss: 146MB	serialize dep graph
  time: 0.085; rss: 134MB	llvm function passes [0]
  time: 0.027; rss: 135MB	llvm module passes [0]
  time: 1.785; rss: 140MB	codegen passes [0]
  time: 0.000; rss: 134MB	codegen passes [0]
time: 1.898; rss: 134MB	LLVM passes
time: 0.000; rss: 134MB	serialize work products
  time: 0.155; rss: 84MB	running linker
time: 0.157; rss: 84MB	linking
done
